--- a/Swift5Firebase/Swift5Firebase/Info.plist
+++ b/Swift5Firebase/Swift5Firebase/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>カメラ使用します</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アルバムを使用</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
